[project]
name = "subx"
version = "1.2"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.11.0",
    "feedparser>=6.0.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "shodan>=1.31.0",
    "vt-py>=0.22.0",
    "censys-platform>=0.14.0",
    "pyyaml>=6.0.3",
    "aiosqlite>=0.22.1",
    "sqlmodel>=0.0.38",
    "sqlalchemy>=2.0.50",
    "typer>=0.26.7",
    "rich>=15.0.0",
    "otxv2==1.5.12",
]

[project.scripts]
subx = "main:app"

